--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ankit Katwal</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/7426b6382d.js" crossorigin="anonymous"></script>
+    
 </head>
 <body>
     <div id="header">
@@ -23,18 +24,24 @@
                 <i class="fas fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>Web Developer/Tech learner</p>
-                <h1>Hi, I'm<span> Ankit Katwal</span><br>from Nepal</h1>
+                <p><span>Web Developer</span>/Tech learner</p>
+                <h1>Hi, I'm<span> Ankit Katwal</span><br>from Nepal.</h1>
 
             </div>
         </div>  
+    </div>
+    
+    <div class="top-top">
+        <a href="#" class="arrow-up">
+            <i class="fa-thin fa-arrow-up-to-line" style="color:white;"></i>
+        </a>
     </div>
     <!-- ----------about--------- -->
     <div id="about">
       <div class="container">
            <div class="row">
                     <div   div   div class="about-col-1">
-                        <img src="images/IMG-20230611-WA0008.jpg">
+                        <img src="images/IMG-20221027-WA0033.jpg">
                     </div>
                 <div class="about-col-2">
                         <h1 class="sub-title">About Me</h1>
@@ -155,9 +162,9 @@
                     <p><i class="fa-sharp fa-regular fa-paper-plane"></i>ankitkatwal47@gmail.com</p>
                     <p><i class="fa-sharp fa-solid fa-phone-volume"></i>9805319388</p>
                     <div class="social-icons">
-                        <a href="https://www.facebook.com/ankeet.kc.9"><i class="fa-brands fa-facebook"></i></a>
-                        <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com/in/ankit-katwal-161947264/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a  target="_blank"href="https://www.facebook.com/ankeet.kc.9"><i class="fa-brands fa-facebook"></i></a>
+                        <a  target="_blank"href="https://www.instagram.com/herrculess_47/"><i class="fa-brands fa-instagram"></i></a>
+                        <a target="_blank"href="https://www.linkedin.com/in/ankit-katwal-161947264/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
                     <a href="images/my-cv.pdf" class="btn btn2">Downlaod CV</a>
                 </div>
@@ -174,7 +181,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>@ No Copyright. Made by Ankit<i class="fa-solid fa-heart"></i></p>
+        <p>@From GreatStack. Designed by Kevin<i class="fa-solid fa-heart"></i></p>
     </div>
 </div>
 
@@ -182,51 +189,8 @@
 
 
 
-    <script>
-        var tablinks = document.getElementsByClassName("tab-links");
-        var tabcontents = document.getElementsByClassName("tab-contents");
+<script src="main.js">
 
-        function opentab(tabname){
-            for(tablink of tablinks ){
-                tablink.classList.remove("active-link");
-            }
-            for(tabcontent of tabcontents ){
-                tabcontent.classList.remove("active-tab");
-            }
-            event.currentTarget.classList.add("active-link");
-            document.getElementById(tabname).classList.add("active-tab");
-        }     
-    </script>
-
-    <script>
-
-        var sidemeu = document.getElementById("sidemenu");
-
-        function openmenu(){
-            sidemeu.style.right="0";
-        }
-
-        function closemenu(){
-            sidemeu.style.right="-200px";
-        }
-
-    </script>
-    <script>
-        const scriptURL = 'https://script.google.com/macros/s/AKfycbxEiVnPrcRpMSIdN3OZwFBrlgj_vsC1yjobew7fWVD_dsn-M4MVTMP-x4llFKL2l_lg/exec'
-        const form = document.forms['submit-to-google-sheet']
-        const msg = document.getElementById("msg")
-        form.addEventListener('submit', e => {
-          e.preventDefault()
-          fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-            .then(response => {
-                msg.innerHTML = "Message sent successfully!!"
-                setTimeout(function(){
-                    msg.innerHTML=""
-                },3000)
-                form.reset()
-            })
-            .catch(error => console.error('Error!', error.message))
-        })
-      </script>
+</script>
 </body>
 </html>
