--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         <a  target="_blank"href="https://www.instagram.com/herrculess_47/"><i class="fa-brands fa-instagram"></i></a>
                         <a target="_blank"href="https://www.linkedin.com/in/ankit-katwal-161947264/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a href="images/my-cv.pdf" class="btn btn2">Downlaod CV</a>
+                    <a href="images/CV.pdf" class="btn btn2">Downlaod CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet"> 
